--- a/player.html
+++ b/player.html
@@ -6,24 +6,26 @@
     </head>
     <body>
 
-		<div id="menu-bar">
-    		<div id="logo-container">
-    			<a href="index.html"><div id="logo"></div></a>
-			</div>
-			<div id="menu-border"></div>
-    		<div id="ticker">49ers LB Smith facing DUI, pot charges</div>
-    		<div id="menu-border"></div>
-    		<div id="menu-scores">
-    			<div id="score"><span class="team-name">DET</span> 21</br><span class="team-name">ARI</span> 25</div>
-				<div id="score"><span class="team-name">ABC</span> 31</br><span class="team-name">MIN</span> 15</div>
-				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
-				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
-				<div id="score"><span class="team-name">MIN</span> 21</br><span class="team-name">CWS</span> 25</div>
-				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
-				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
-				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
-    		</div>
-		</div>
+        <div id="menu-bar">
+            <div id="logo-container">
+                <a href="index.html"><div id="logo"></div></a>
+            </div>
+            <div id="menu-border"></div>
+            <div id="ticker">49ers LB Smith facing DUI, pot charges</div>
+            <div id="menu-border"></div>
+            <div id="menu-scores">
+                <div class="score-container">
+                    <div id="score"><span class="team-name">DET</span> 21</br><span class="team-name">ARI</span> 25</div>
+                    <div id="score"><span class="team-name">ABC</span> 31</br><span class="team-name">MIN</span> 15</div>
+                    <div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
+                    <div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+                    <div id="score"><span class="team-name">MIN</span> 21</br><span class="team-name">CWS</span> 25</div>
+                    <div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+                    <div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
+                    <div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+                </div>
+            </div>
+        </div>
     <div class="cover">
         <div class="cover-footer">
             <div class="profile-img" id="profile-ray-lewis"></div>
