--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 
     	<div id="menu-bar">
-    		<div id="logo-container">
+			<div id="logo-container">
     			<a href="index.html"><div id="logo"></div></a>
 			</div>
 			<div id="menu-border"></div>
-    		<div id="ticker">49ers LB Smith facing DUI, pot charges</div>
+    		<a href="#stories"><div id="ticker">49ers LB Smith facing DUI, pot charges</div></a>
     		<div id="menu-border"></div>
     		<div id="menu-scores">
                 <div class="score-container">
@@ -25,6 +25,40 @@
     				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
     				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
                 </div>
+    		</div>
+    		<div class="menu-dropdown hidden">
+	    		<ul class="logo-dropdown">
+	    			<a href="football.html"><li id="dropdown-football">
+	    				<div class="dropdown-sport-logo" id="football"></div>
+	    				<div class="dropdown-sport-title">FOOTBALL</div>
+					</li></a>
+					<li id="dropdown-football">
+	    				<div class="dropdown-sport-logo" id="soccer"></div>
+	    				<div class="dropdown-sport-title">SOCCER</div>
+					</li>
+					<li id="dropdown-basketball">
+	    				<div class="dropdown-sport-logo" id="basketball"></div>
+	    				<div class="dropdown-sport-title">BASKETBALL</div>
+					</li>
+					<li id="dropdown-baseball">
+	    				<div class="dropdown-sport-logo" id="baseball"></div>
+	    				<div class="dropdown-sport-title">BASEBALL</div>
+					</li>
+					<li id="dropdown-hockey">
+	    				<div class="dropdown-sport-logo" id="hockey"></div>
+	    				<div class="dropdown-sport-title">HOCKEY</div>
+					</li>
+					<li id="dropdown-golf">
+	    				<div class="dropdown-sport-logo" id="golf"></div>
+	    				<div class="dropdown-sport-title">GOLF</div>
+					</li>
+					<li id="dropdown-swimming">
+	    				<div class="dropdown-sport-logo" id="swimming"></div>
+	    				<div class="dropdown-sport-title">SWIMMING</div>
+					</li>
+	    		</ul>
+	    		<div class="ticker-dropdown"></div>
+	    		<div class="scores-dropdown"></div>
     		</div>
 		</div>
 		<div id="hero-nav">
@@ -99,5 +133,6 @@
     <script src="js/waypoints.min.js"></script>
     <script src="js/waypoints-sticky.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/global.js"></script>
     </body>
 </html>
