added global.js to all pages

--- a/football.html
+++ b/football.html
@@ -388,6 +388,7 @@
 
 	<script src="js/jquery-2.0.3.min.js"></script>
 	<script src="js/waypoints.min.js"></script>
+	<script src="js/global.js"></script>
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/imagesloaded.js"></script>
 	<script src="js/modernizr.custom.js"></script>
