--- a/player.html
+++ b/player.html
@@ -417,5 +417,6 @@
     <script src="js/jquery-2.0.3.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/waypoints-sticky.min.js"></script>
+    <script src="js/global.js"></script>
     </body>
 </html>
