--- a/scores.html
+++ b/scores.html
@@ -220,5 +220,6 @@
     <script src="js/waypoints.min.js"></script>
     <script src="js/waypoints-sticky.min.js"></script>
     <script src="js/scores.js"></script>
+    <script src="js/global.js"></script>
     </body>
 </html>
