--- a/superbowl.html
+++ b/superbowl.html
@@ -113,5 +113,6 @@
     <script src="js/waypoints.min.js"></script>
     <script src="js/waypoints-sticky.min.js"></script>
     <script src="js/article.js"></script>
+    <script src="js/global.js"></script>
     </body>
 </html>
