added "view more" scores, added multiple ticker items, implemented new menu bar across all pages

--- a/superbowl.html
+++ b/superbowl.html
@@ -7,25 +7,69 @@
     <body>
 
     	<div id="menu-bar">
-    		<div id="logo-container">
-    			<a href="index.html"><div id="logo"></div></a>
-			</div>
-			<div id="menu-border"></div>
-    		<div id="ticker">49ers LB Smith facing DUI, pot charges</div>
-    		<div id="menu-border"></div>
-    		<div id="menu-scores">
-                <div class="score-container">
-        			<div id="score"><span class="team-name">DET</span> 21</br><span class="team-name">ARI</span> 25</div>
-    				<div id="score"><span class="team-name">ABC</span> 31</br><span class="team-name">MIN</span> 15</div>
-    				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
-    				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
-    				<div id="score"><span class="team-name">MIN</span> 21</br><span class="team-name">CWS</span> 25</div>
-    				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
-    				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
-    				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+            <div id="logo-container">
+                <a href="index.html"><div id="logo"></div></a>
+            </div>
+            <div id="menu-border"></div>
+            <a href="#stories">
+                <div id="ticker">
+                    <ul id="ticker-container">
+                        <li>Lions WR Johnson inactive at Green Bay</li>
+                        <li>Eagles' Vick leaves with left leg injury</li>
+                        <li>Brees, Graham lead 5-0 Saints past Bears</li>
+                        <li>Woods delivers US Presidents Cup win</li>
+                    </ul>
                 </div>
-    		</div>
-		</div>
+            </a>
+            <div id="menu-border"></div>
+            <div id="menu-scores">
+                <div class="score-container">
+                    <div id="score"><span class="team-name">DET</span> 21</br><span class="team-name">ARI</span> 25</div>
+                    <div id="score"><span class="team-name">ABC</span> 31</br><span class="team-name">MIN</span> 15</div>
+                    <div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
+                    <div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+                    <div id="score"><span class="team-name">MIN</span> 21</br><span class="team-name">CWS</span> 25</div>
+                    <div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+                    <div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
+                    <div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
+                </div>
+                <a class="scores-more" href="scores.html">View More</a>
+            </div>
+            <div class="menu-dropdown hidden">
+                <ul class="logo-dropdown">
+                    <a href="football.html"><li id="dropdown-football">
+                        <div class="dropdown-sport-logo" id="football"></div>
+                        <div class="dropdown-sport-title">FOOTBALL</div>
+                    </li></a>
+                    <li id="dropdown-football">
+                        <div class="dropdown-sport-logo" id="soccer"></div>
+                        <div class="dropdown-sport-title">SOCCER</div>
+                    </li>
+                    <li id="dropdown-basketball">
+                        <div class="dropdown-sport-logo" id="basketball"></div>
+                        <div class="dropdown-sport-title">BASKETBALL</div>
+                    </li>
+                    <li id="dropdown-baseball">
+                        <div class="dropdown-sport-logo" id="baseball"></div>
+                        <div class="dropdown-sport-title">BASEBALL</div>
+                    </li>
+                    <li id="dropdown-hockey">
+                        <div class="dropdown-sport-logo" id="hockey"></div>
+                        <div class="dropdown-sport-title">HOCKEY</div>
+                    </li>
+                    <li id="dropdown-golf">
+                        <div class="dropdown-sport-logo" id="golf"></div>
+                        <div class="dropdown-sport-title">GOLF</div>
+                    </li>
+                    <li id="dropdown-swimming">
+                        <div class="dropdown-sport-logo" id="swimming"></div>
+                        <div class="dropdown-sport-title">SWIMMING</div>
+                    </li>
+                </ul>
+                <div class="ticker-dropdown"></div>
+                <div class="scores-dropdown"></div>
+            </div>
+        </div>
         <div class="hero-img-container">
             <div class="hero-title-container">
                 <div class="hero-header">Superbowl 2013</div>
