--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     			<a href="index.html"><div id="logo"></div></a>
 			</div>
 			<div id="menu-border"></div>
-    		<a href="#stories"><div id="ticker">49ers LB Smith facing DUI, pot charges</div></a>
+    			<div id="ticker">
+    				<ul id="ticker-container">
+		    			<li>Lions WR Johnson inactive at Green Bay</li>
+		    			<li>Eagles' Vick leaves with left leg injury</li>
+		    			<li>Brees, Graham lead 5-0 Saints past Bears</li>
+		    			<li>Woods delivers US Presidents Cup win</li>
+	    			</ul>
+    			</div>
     		<div id="menu-border"></div>
     		<div id="menu-scores">
                 <div class="score-container">
@@ -25,6 +32,7 @@
     				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
     				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
                 </div>
+                <a class="scores-more" href="scores.html">View More</a>
     		</div>
     		<div class="menu-dropdown hidden">
 	    		<ul class="logo-dropdown">
