fixed ticker bug

--- a/football.html
+++ b/football.html
@@ -15,7 +15,7 @@
     				<ul id="ticker-container">
 		    			<li>Lions WR Johnson inactive at Green Bay</li>
 		    			<li>Eagles' Vick leaves with left leg injury</li>
-		    			<li>Brees, Graham lead 5-0 Saints past Bears</li>
+		    			<li>Brees, Graham lead 5-0 Saints</li>
 		    			<li>Woods delivers US Presidents Cup win</li>
 	    			</ul>
     			</div>
