new block animation for homepage, various bug fixes, aesthetic changes

--- a/index.html
+++ b/index.html
@@ -103,35 +103,15 @@
 			</div>
 			<div id="stories">
 				<div id="story-grid" class="inline-visible">
-					<div class="story-block cat-basketball" id="block-story-1">
-						<div id="block-title-container">
-							<div class="block-title-background"></div>
-							<div class="block-title">Michael Jordan dunks again.</div>
+					<div class="story-block cat-basketball">
+						<div class="block-category">
+							<div class="block-category-icon" id="basketball"></div>
 						</div>
+						<div class="block-title">Rose scores 13 in long-awaited return</div>
+						
+						<div class="block-bg" id="block-story-1"></div>
 					</div>
-					<div class="story-block" id="block-story-2"></div>
-					<div class="story-block" id="block-story-3"></div>
-					<div class="story-block" id="block-story-4"></div>
-					<div class="story-block" id="block-story-5"></div>
-					<div class="story-block" id="block-story-6"></div>
-					<div class="story-block" id="block-story-7"></div>
-					<div class="story-block" id="block-story-8"></div>
-					<div class="story-block" id="block-story-9"></div>
-					<div class="story-block" id="block-story-10"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
-					<div class="story-block" id="temp-block"></div>
+					
 				</div>
 				<div id="story-list" class="hidden"></div>
 			</div>
