refine football caption animation, more content

--- a/football.html
+++ b/football.html
@@ -158,22 +158,22 @@
 		</div>
 		<ul id="stream-content" class="js-masonry grid effect-4" data-masonry-options='{ "columnWidth": 1}'>
 			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">Indianapolis Colts continue to beat up NFC West powers</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-1"></div>
 			</li>
 			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">Tom Brady’s 52-game streak with a touchdown pass ends in 13-6 loss to Bengals</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-2"></div>
 			</li>
 			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">Packers James Jones’ gets rejected by rogue Lions fans</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-3"></div>
 			</li>
 			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">Can Colin Kaepernick find fantasy success?</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-4"></div>
 			</li>
