--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
 						
 						<div class="block-bg" id="block-story-6"></div>
 					</div>
-					<div class="story-block">
+					<a href="http://coke.com"><div class="story-block">
 						<div class="block-category">
 							<div class="block-category-ad">AD</div>
 						</div>
 						<div class="block-title">Enjoy Coca Cola</div>
 						
 						<div class="block-bg" id="block-ad"></div>
-					</div>
+					</div></a>
 					<div class="story-block">
 						<div class="block-category">
 							<div class="block-category-icon" id="soccer"></div>
@@ -204,6 +204,7 @@
 				<div id="story-list" class="hidden"></div>
 			</div>
 		</div>
+		
 
 	<script src="js/jquery-2.0.3.min.js"></script>
     <script src="js/waypoints.min.js"></script>
