--- a/scores.html
+++ b/scores.html
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 				<div class="scorebox">
-					<div class="score-photo"></div>
+					<div class="score-photo" id="photo-5"></div>
 					<div class="score-text">
 						<div class="score-header">
 							<div class="team team-1">
@@ -180,11 +180,11 @@
 								<h2 class="team-name">STL</h2>
 							</div>
 						</div>
-						<div class="game-title">49ers bounce back by beating Rams</div>
+						<div class="game-title">Prater's FG lifts Broncos past Cowboys</div>
 						<div class="game-summary">
-							After getting only 11 carries last week, Frank Gore never made a public stink about it. Coach Jim Harbaugh noted he wasn't the only unhappy player after the San Francisco 49ers lost their second straight game.
+							Matt Prater kicked a 28-yard field goal as time expired and Peyton Manning and Denver overcame the first 500-yard passing game in Dallas history to keep the Broncos unbeaten with a 51-48 victory over the Cowboys on Sunday.
 							</br>___</br></br>
-							Sam Bradford passed to Lance Kendricks down the middle for 6 yard gain (2pt attempt converted, Benny Cunningham run up the middle)
+							Peyton Manning passed to Julius Thomas down the middle for 4 yard gain (Matt Prater made PAT).
 						</div>
 					</div>
 				</div>
