Flowed in score page

--- a/scores.html
+++ b/scores.html
@@ -171,13 +171,13 @@
 						<div class="score-header">
 							<div class="team team-1">
 								<div class="team-logo"></div>
-								<h2 class="team-name">SF</h2>
-								<h1 class="score">35</h1>
+								<h2 class="team-name">DEN</h2>
+								<h1 class="score">51</h1>
 							</div>
 							<div class="team team-2">
 								<div class="team-logo"></div>
-								<h1 class="score">11</h1>
-								<h2 class="team-name">STL</h2>
+								<h1 class="score">48</h1>
+								<h2 class="team-name">DAL</h2>
 							</div>
 						</div>
 						<div class="game-title">Prater's FG lifts Broncos past Cowboys</div>
@@ -189,71 +189,71 @@
 					</div>
 				</div>
 				<div class="scorebox">
-					<div class="score-photo"></div>
+					<div class="score-photo" id="photo-6"></div>
 					<div class="score-text">
 						<div class="score-header">
 							<div class="team team-1">
 								<div class="team-logo"></div>
-								<h2 class="team-name">SF</h2>
-								<h1 class="score">35</h1>
+								<h2 class="team-name">PHI</h2>
+								<h1 class="score">36</h1>
 							</div>
 							<div class="team team-2">
 								<div class="team-logo"></div>
-								<h1 class="score">11</h1>
-								<h2 class="team-name">STL</h2>
+								<h1 class="score">21</h1>
+								<h2 class="team-name">NYG</h2>
 							</div>
 						</div>
-						<div class="game-title">49ers bounce back by beating Rams</div>
+						<div class="game-title">Vick hurt, but Eagles drop Giants</div>
 						<div class="game-summary">
-							After getting only 11 carries last week, Frank Gore never made a public stink about it. Coach Jim Harbaugh noted he wasn't the only unhappy player after the San Francisco 49ers lost their second straight game.
+							Chip Kelly's up-tempo offense didn't keep the New York Giants winless. David Wilson rushed to the right for 5 yard gain (Josh Brown made PAT). Eli Manning passed to Rueben Randle down the middle for 26 yard gain (Josh Brown made PAT).
 							</br>___</br></br>
-							Sam Bradford passed to Lance Kendricks down the middle for 6 yard gain (2pt attempt converted, Benny Cunningham run up the middle)
+							Nick Foles passed to DeSean Jackson to the right for 5 yard gain (Alex Henery made PAT).
 						</div>
 					</div>
 				</div>
 				<div class="scorebox">
-					<div class="score-photo"></div>
+					<div class="score-photo" id="photo-7"></div>
 					<div class="score-text">
 						<div class="score-header">
 							<div class="team team-1">
 								<div class="team-logo"></div>
-								<h2 class="team-name">SF</h2>
-								<h1 class="score">35</h1>
+								<h2 class="team-name">CAR</h2>
+								<h1 class="score">6</h1>
 							</div>
 							<div class="team team-2">
 								<div class="team-logo"></div>
-								<h1 class="score">11</h1>
-								<h2 class="team-name">STL</h2>
+								<h1 class="score">22</h1>
+								<h2 class="team-name">ARI</h2>
 							</div>
 						</div>
-						<div class="game-title">49ers bounce back by beating Rams</div>
+						<div class="game-title">Washington, Arizona defense beat Carolina</div>
 						<div class="game-summary">
-							After getting only 11 carries last week, Frank Gore never made a public stink about it. Coach Jim Harbaugh noted he wasn't the only unhappy player after the San Francisco 49ers lost their second straight game.
+							he Cardinals gave Cam Newton a rough reception in his return to Arizona. Rashard Mendenhall rushed to the left for 1 yard gain (Jay Feely made PAT). Graham Gano kicked a 51-yard field goal. Jay Feely kicked a 42-yard field goal.
 							</br>___</br></br>
-							Sam Bradford passed to Lance Kendricks down the middle for 6 yard gain (2pt attempt converted, Benny Cunningham run up the middle)
+							Carson Palmer passed to Jim Dray down the middle for 7 yard gain (Jay Feely made PAT)
 						</div>
 					</div>
 				</div>
 				<div class="scorebox">
-					<div class="score-photo"></div>
+					<div class="score-photo" id="photo-8"></div>
 					<div class="score-text">
 						<div class="score-header">
 							<div class="team team-1">
 								<div class="team-logo"></div>
-								<h2 class="team-name">SF</h2>
-								<h1 class="score">35</h1>
+								<h2 class="team-name">BAL</h2>
+								<h1 class="score">26</h1>
 							</div>
 							<div class="team team-2">
 								<div class="team-logo"></div>
-								<h1 class="score">11</h1>
-								<h2 class="team-name">STL</h2>
+								<h1 class="score">23</h1>
+								<h2 class="team-name">MIA</h2>
 							</div>
 						</div>
-						<div class="game-title">49ers bounce back by beating Rams</div>
+						<div class="game-title">Tucker's kick lifts Ravens past Dolphins</div>
 						<div class="game-summary">
-							After getting only 11 carries last week, Frank Gore never made a public stink about it. Coach Jim Harbaugh noted he wasn't the only unhappy player after the San Francisco 49ers lost their second straight game.
+							Frantically trying to protect a slim lead late in the fourth quarter, the Baltimore Ravens' pass rushers let Ryan Tannehill slip away to throw for a big gain. Justin Tucker kicked a 42-yard field goal
 							</br>___</br></br>
-							Sam Bradford passed to Lance Kendricks down the middle for 6 yard gain (2pt attempt converted, Benny Cunningham run up the middle)
+							Ryan Tannehill passed to Charles Clay to the left for 9 yard gain (Caleb Sturgis made PAT).
 						</div>
 					</div>
 				</div>
