added links to player page in superbowl page

--- a/superbowl.html
+++ b/superbowl.html
@@ -98,7 +98,7 @@
                 </h1>
                 <div id="body-1-container">
                     <h2 class="body" id="body-1">
-                        <span>T</span>he Baltimore Ravens survived a frenzied comeback by the San Francisco 49ers following a 34-minute delay in the third quarter for a power outage Sunday night, winning their second championship 34-31. Super Bowl MVP Joe Flacco threw three first-half touchdown passes, Jacoby Jones ran back the second-half kickoff a record 108 yards for a score, and star linebacker Ray Lewis ' last play fittingly was part of a defensive effort that saved the victory.
+                        <span>T</span>he Baltimore Ravens survived a frenzied comeback by the San Francisco 49ers following a 34-minute delay in the third quarter for a power outage Sunday night, winning their second championship 34-31. Super Bowl MVP Joe Flacco threw three first-half touchdown passes, Jacoby Jones ran back the second-half kickoff a record 108 yards for a score, and star linebacker <a href="player.html">Ray Lewis</a> ' last play fittingly was part of a defensive effort that saved the victory.
                         </br></br>
                         As parts of the stadium went to black in the opening moments of the second half, the worst nightmare for the Baltimore contingent was that the Ravens could lose momentum at the exact point they were on the cusp of delivering a knockout blow in the Super Bowl, and taking away the ending this back-from-the-brink season deserved.
                         </br></br>
@@ -129,7 +129,7 @@
                 <h2 id="body-3">
                     In hindsight, they needed the lights to go out, the momentum to shift, their mojo to disappear, their legs to tire, their middle linebacker to look as old as time. A blowout — it was 28-6 after Jacoby Jones’s 108-yard kickoff return to begin the second half — would not have been fitting.
                     </br></br>
-                    Not for this team, this year. Not for linebacker Ray Lewis or safety Ed Reed. Not for Flacco or Jim Caldwell, who was installed as offensive coordinator in December. Not for wide receiver Torrey Smith or any of Coach John Harbaugh’s players.
+                    Not for this team, this year. Not for linebacker <a href="player.html">Ray Lewis</a> or safety Ed Reed. Not for Flacco or Jim Caldwell, who was installed as offensive coordinator in December. Not for wide receiver Torrey Smith or any of Coach John Harbaugh’s players.
                 </h2>
                 <div class="full-photo" id="photo-4"></div>
                 <h2>
