fixed menu-bar animation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <a class="scores-more" href="scores.html">View More</a>
     		</div>
-    		<div class="menu-dropdown hidden">
+    		<div class="menu-dropdown">
 	    		<ul class="logo-dropdown">
 	    			<a href="football.html"><li id="dropdown-football">
 	    				<div class="dropdown-sport-logo" id="football"></div>
