--- a/football.html
+++ b/football.html
@@ -10,7 +10,6 @@
     			<a href="index.html"><div id="logo"></div></a>
 			</div>
 			<div id="menu-border"></div>
-    		<a href="#stories">
     			<div id="ticker">
     				<ul id="ticker-container">
 		    			<li>Lions WR Johnson inactive at Green Bay</li>
@@ -19,7 +18,6 @@
 		    			<li>Woods delivers US Presidents Cup win</li>
 	    			</ul>
     			</div>
-    		</a>
     		<div id="menu-border"></div>
     		<div id="menu-scores">
                 <div class="score-container">
@@ -34,7 +32,7 @@
                 </div>
                 <a class="scores-more" href="scores.html">View More</a>
     		</div>
-    		<div class="menu-dropdown hidden">
+    		<div class="menu-dropdown">
 	    		<ul class="logo-dropdown">
 	    			<a href="football.html"><li id="dropdown-football">
 	    				<div class="dropdown-sport-logo" id="football"></div>
