--- a/index.html
+++ b/index.html
@@ -32,41 +32,43 @@
     				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
     				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
                 </div>
-                <a class="scores-more" href="scores.html">View More</a>
+                <a class="scores-more" href="scores.html">More Scores</a>
     		</div>
     		<div class="menu-dropdown">
 	    		<ul class="logo-dropdown">
-	    			<a href="football.html"><li id="dropdown-football">
-	    				<div class="dropdown-sport-logo" id="football"></div>
-	    				<div class="dropdown-sport-title">FOOTBALL</div>
-					</li></a>
-					<li id="dropdown-football">
-	    				<div class="dropdown-sport-logo" id="soccer"></div>
-	    				<div class="dropdown-sport-title">SOCCER</div>
-					</li>
-					<li id="dropdown-basketball">
-	    				<div class="dropdown-sport-logo" id="basketball"></div>
-	    				<div class="dropdown-sport-title">BASKETBALL</div>
-					</li>
-					<li id="dropdown-baseball">
-	    				<div class="dropdown-sport-logo" id="baseball"></div>
-	    				<div class="dropdown-sport-title">BASEBALL</div>
-					</li>
-					<li id="dropdown-hockey">
-	    				<div class="dropdown-sport-logo" id="hockey"></div>
-	    				<div class="dropdown-sport-title">HOCKEY</div>
-					</li>
-					<li id="dropdown-golf">
-	    				<div class="dropdown-sport-logo" id="golf"></div>
-	    				<div class="dropdown-sport-title">GOLF</div>
-					</li>
-					<li id="dropdown-swimming">
-	    				<div class="dropdown-sport-logo" id="swimming"></div>
-	    				<div class="dropdown-sport-title">SWIMMING</div>
+	    			<div class="view-more-left"><</div>
+	    			<div class="view-more-right">></div>
+	    			<div id="dropdown-items">
+		    			<a href="football.html"><li id="dropdown-football">
+		    				<div class="dropdown-sport-logo" id="football"></div>
+		    				<div class="dropdown-sport-title">FOOTBALL</div>
+						</li></a>
+						<li id="dropdown-football">
+		    				<div class="dropdown-sport-logo" id="soccer"></div>
+		    				<div class="dropdown-sport-title">SOCCER</div>
+						</li>
+						<li id="dropdown-basketball">
+		    				<div class="dropdown-sport-logo" id="basketball"></div>
+		    				<div class="dropdown-sport-title">BASKETBALL</div>
+						</li>
+						<li id="dropdown-baseball">
+		    				<div class="dropdown-sport-logo" id="baseball"></div>
+		    				<div class="dropdown-sport-title">BASEBALL</div>
+						</li>
+						<li id="dropdown-hockey">
+		    				<div class="dropdown-sport-logo" id="hockey"></div>
+		    				<div class="dropdown-sport-title">HOCKEY</div>
+						</li>
+						<li id="dropdown-golf">
+		    				<div class="dropdown-sport-logo" id="golf"></div>
+		    				<div class="dropdown-sport-title">GOLF</div>
+						</li>
+						<li id="dropdown-swimming">
+		    				<div class="dropdown-sport-logo" id="swimming"></div>
+		    				<div class="dropdown-sport-title">SWIMMING</div>
+	    				</div>
 					</li>
 	    		</ul>
-	    		<div class="ticker-dropdown"></div>
-	    		<div class="scores-dropdown"></div>
     		</div>
 		</div>
 		<div id="hero-nav">
