--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     				<div id="score"><span class="team-name">CLE</span> 21 </br><span class="team-name">KC</span> 25</div>
     				<div id="score"><span class="team-name">IGP</span> 21</br><span class="team-name">OHT</span> 25</div>
                 </div>
-                <a class="scores-more" href="scores.html">More Scores</a>
+                <a class="scores-more" href="scores.html">View More</a>
     		</div>
     		<div class="menu-dropdown">
 	    		<ul class="logo-dropdown">
@@ -84,8 +84,8 @@
 			<div id="hero-container">
 				<a href="superbowl.html"><div class="story" id="story-1">
 					<div class="hero-text-container">
-						<div class="hero-header">baltimore ravens</div>
-						<div class="hero-subheader">superbowl 2013</div>
+						<div class="hero-header">Baltimore Ravens</div>
+						<div class="hero-subheader">Superbowl 2013</div>
 					</div>
 				</div></a>
 			</div>
@@ -153,7 +153,7 @@
 						
 						<div class="block-bg" id="block-story-6"></div>
 					</div>
-					<a href="http://coke.com"><div class="story-block">
+					<a href="http://coke.com"><div class="story-block ad">
 						<div class="block-category">
 							<div class="block-category-ad">AD</div>
 						</div>
