Cleaned up sports ui, took out unneccesary animations and clutter

--- a/football.html
+++ b/football.html
@@ -34,37 +34,39 @@
     		</div>
     		<div class="menu-dropdown">
 	    		<ul class="logo-dropdown">
-	    			<a href="football.html"><li id="dropdown-football">
-	    				<div class="dropdown-sport-logo" id="football"></div>
-	    				<div class="dropdown-sport-title">FOOTBALL</div>
-					</li></a>
-					<li id="dropdown-football">
-	    				<div class="dropdown-sport-logo" id="soccer"></div>
-	    				<div class="dropdown-sport-title">SOCCER</div>
-					</li>
-					<li id="dropdown-basketball">
-	    				<div class="dropdown-sport-logo" id="basketball"></div>
-	    				<div class="dropdown-sport-title">BASKETBALL</div>
-					</li>
-					<li id="dropdown-baseball">
-	    				<div class="dropdown-sport-logo" id="baseball"></div>
-	    				<div class="dropdown-sport-title">BASEBALL</div>
-					</li>
-					<li id="dropdown-hockey">
-	    				<div class="dropdown-sport-logo" id="hockey"></div>
-	    				<div class="dropdown-sport-title">HOCKEY</div>
-					</li>
-					<li id="dropdown-golf">
-	    				<div class="dropdown-sport-logo" id="golf"></div>
-	    				<div class="dropdown-sport-title">GOLF</div>
-					</li>
-					<li id="dropdown-swimming">
-	    				<div class="dropdown-sport-logo" id="swimming"></div>
-	    				<div class="dropdown-sport-title">SWIMMING</div>
+	    			<div class="view-more-left"><</div>
+	    			<div class="view-more-right">></div>
+	    			<div id="dropdown-items">
+		    			<a href="football.html"><li id="dropdown-football">
+		    				<div class="dropdown-sport-logo" id="football"></div>
+		    				<div class="dropdown-sport-title">FOOTBALL</div>
+						</li></a>
+						<li id="dropdown-soccer">
+		    				<div class="dropdown-sport-logo" id="soccer"></div>
+		    				<div class="dropdown-sport-title">SOCCER</div>
+						</li>
+						<li id="dropdown-basketball">
+		    				<div class="dropdown-sport-logo" id="basketball"></div>
+		    				<div class="dropdown-sport-title">BASKETBALL</div>
+						</li>
+						<li id="dropdown-baseball">
+		    				<div class="dropdown-sport-logo" id="baseball"></div>
+		    				<div class="dropdown-sport-title">BASEBALL</div>
+						</li>
+						<li id="dropdown-hockey">
+		    				<div class="dropdown-sport-logo" id="hockey"></div>
+		    				<div class="dropdown-sport-title">HOCKEY</div>
+						</li>
+						<li id="dropdown-golf">
+		    				<div class="dropdown-sport-logo" id="golf"></div>
+		    				<div class="dropdown-sport-title">GOLF</div>
+						</li>
+						<li id="dropdown-swimming">
+		    				<div class="dropdown-sport-logo" id="swimming"></div>
+		    				<div class="dropdown-sport-title">SWIMMING</div>
+	    				</div>
 					</li>
 	    		</ul>
-	    		<div class="ticker-dropdown"></div>
-	    		<div class="scores-dropdown"></div>
     		</div>
 		</div>
 
@@ -108,42 +110,42 @@
 			</div>
 			<div id="headlines">
 				<h1>HEADLINES</h1>
-				<div class="headline">
+				<a href="#"><div class="headline">
 					<div class="headline-text">Pats' Gronkowski 'on same page' with team</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Sandusky denied new trial by appeals court</div>
-				</div>
-				<div class="headline" style="border-bottom: 0px;">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Fantasy: Best, worst matchups for Week 5</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Pats' Gronkowski 'on same page' with team</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Sandusky denied new trial by appeals court</div>
-				</div>
-				<div class="headline" style="border-bottom: 0px;">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Fantasy: Best, worst matchups for Week 5</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Pats' Gronkowski 'on same page' with team</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Sandusky denied new trial by appeals court</div>
-				</div>
-				<div class="headline" style="border-bottom: 0px;">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Fantasy: Best, worst matchups for Week 5</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Pats' Gronkowski 'on same page' with team</div>
-				</div>
-				<div class="headline">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Sandusky denied new trial by appeals court</div>
-				</div>
-				<div class="headline" style="border-bottom: 0px;">
+				</div></a>
+				<a href="#"><div class="headline">
 					<div class="headline-text">Fantasy: Best, worst matchups for Week 5</div>
-				</div>
+				</div></a>
 			</div>
 			<div id="player-profile"></div>
 		</div>
@@ -151,10 +153,10 @@
 
 	<div id="stream">
 		<div class="stream-title-bar">
-			<div class="football-icon"></div>
+			<div class="football-icon" id="football"></div>
 			<span>FOOTBALL</span>
 		</div>
-		<ul id="stream-content" class="js-masonry grid effect-4" data-masonry-options='{ "columnWidth": 1}'>
+		<ul id="stream-content" class="js-masonry" data-masonry-options='{ "columnWidth": 1}'>
 			<li class="block portrait">
 				<div class="caption">Indianapolis Colts continue to beat up NFC West powers</div>
 				<div class="caption-decoration"></div>
@@ -185,46 +187,6 @@
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-6"></div>
 			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-7"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-8"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-9"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-1"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-2"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-3"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-4"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-5"></div>
-			</li>
 			<li class="block square">
 				<div class="caption">Lorem Ipsum Dolor</div>
 				<div class="caption-decoration"></div>
@@ -240,191 +202,7 @@
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-8"></div>
 			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-9"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-1"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-2"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-3"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-4"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-5"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-6"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-7"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-8"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-9"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-1"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-2"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-3"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-4"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-5"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-6"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-7"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-8"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-9"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-1"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-2"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-3"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-4"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-5"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-6"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-7"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-8"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-9"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-1"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-2"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-3"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-4"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-5"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-6"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-7"></div>
-			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-8"></div>
-			</li>
-			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-9"></div>
-			</li>
+
 		</ul>
 	</div>
 
@@ -432,17 +210,6 @@
 	<script src="js/waypoints.min.js"></script>
 	<script src="js/global.js"></script>
 	<script src="js/masonry.pkgd.min.js"></script>
-	<script src="js/imagesloaded.js"></script>
-	<script src="js/modernizr.custom.js"></script>
-	<script src="js/classie.js"></script>
-	<script src="js/AnimOnScroll.js"></script>
 	<script src="js/sports.js"></script>
-	<script>
-		new AnimOnScroll( document.getElementById( 'stream-content' ), {
-			minDuration : 0.4,
-			maxDuration : 0.7,
-			viewportFactor : 0
-		} );
-	</script>
 </body>
 </html>
