--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		    				<div class="dropdown-sport-logo" id="football"></div>
 		    				<div class="dropdown-sport-title">FOOTBALL</div>
 						</li></a>
-						<li id="dropdown-football">
+						<li id="dropdown-soccer">
 		    				<div class="dropdown-sport-logo" id="soccer"></div>
 		    				<div class="dropdown-sport-title">SOCCER</div>
 						</li>
